# monorepo-storico-lezioni

./: README.md
2015-16/15-16_4_A_SIA/: README.md
2015-16/15-16_4_A_SIA/compito_20160314/: 03_ul_types.php  04_chessboard.php
2015-16/15-16_4_A_SIA/lez01/: capoversi.html  commenti.html  prima_pagina_html.html
2015-16/15-16_4_A_SIA/lez02/: elenchi.html  elenco.php  img.html  link.html
2015-16/15-16_4_A_SIA/lez03/: tipi_elenchi_nonordinati.php  tipi_elenchi_ordinati.php
2015-16/15-16_4_A_SIA/lez04/: div_span.html  form.html  logica.php  tabelle.html
2015-16/15-16_4_A_SIA/lez05/: scelte.html
2015-16/15-16_4_A_SIA/lez06/: colori.html
2015-16/15-16_4_A_SIA/lez07/: commenti.php  esempio_1.php  pari.php
2015-16/15-16_4_A_SIA/lez08/: no_side_effects.php  post_incr.php  potenza.php  pre_incr.php
2015-16/15-16_4_A_SIA/lez09/: carte.php  carte_associativo.php
2015-16/15-16_4_A_SIA/lez19/: fatt.js  (+2 more)
2015-16/15-16_5_A_SIA/: README.md
2015-16/15-16_S-4D/: README.md
2015-16/15-16_S-4E/: README.md
2015-16/corso_formazione_interna_moodle/: README.md
2020-21/as2021_3asia/: .gitignore  README.md  environment.yml
2020-21/as2021_3bsia/: README.md  environment.yml
2021-22/as2122_3asia/: .git-credential  .gitignore  README.md
2021-22/as2122_3asia/2021-11-03/: .replit  CMakeLists.txt  perimetro_trapezio_rettangolo.cpp
2021-22/as2122_3asia/2022-01-24/: CMakeLists.txt  ciao_mondo.cpp  fattoriale.cpp  massimo3.cpp  pi_quarti.cpp  quadrato.cpp  ridotto.cpp  risolvi_eq_2.cpp  somma_inversi_potenze.cpp  somma_quadrati_maggiori.cpp
2021-22/as2122_4asia/: README.md
(+410 files in other folders)
