cmake_minimum_required(VERSION 3.10)
project(compito)
add_executable(01_ridotto ridotto.cpp)
add_executable(02_ciao_mondo ciao_mondo.cpp)
add_executable(03_quadrato quadrato.cpp)
add_executable(04_fattoriale fattoriale.cpp)
add_executable(05_somma_quadrati_maggiori somma_quadrati_maggiori.cpp)
add_executable(06_risolvi_eq_2 risolvi_eq_2.cpp)
add_executable(07_massimo3 massimo3.cpp)
add_executable(08_somma_inversi_potenze somma_inversi_potenze.cpp)
add_executable(09_pi_quarti pi_quarti.cpp)